--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
             transform: translateY(-100%);
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9HQ79SPZCQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-9HQ79SPZCQ');
+    </script>
+
 </head>
 
 <body class="bg-gray-900">
@@ -97,7 +107,7 @@
 
                 <!-- Logo/Brand -->
                 <div class="flex items-center space-x-3 flex-shrink-0">
-                    
+
                     <span class="text-white text-xl font-bold">
                         Trading <span class="text-primary">Avenue</span>
                     </span>
